# LinAlgCPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp  matrix.cpp  matrix.h  test_matrix  test_matrix.cpp
include/: matrix.hpp
src/: matrix.cpp
tests/: test_matrix.cpp
